Fix #121209: Menu switch missing matrix socket