source/blender/nodes/geometry/nodes/node_geo_menu_switch.cc
@@ -39,7 +39,8 @@ static bool is_supported_socket_type(const eNodeSocketDatatype data_type)
               SOCK_OBJECT,
               SOCK_COLLECTION,
               SOCK_MATERIAL,
-              SOCK_IMAGE);
+              SOCK_IMAGE,
+              SOCK_MATRIX);
 }
 
 static void node_declare(blender::nodes::NodeDeclarationBuilder &b)
